# SimSim_Molecular

./: .gitmodules  CMakeLists.txt  README.md
molecular/: CMakeLists.txt
molecular_tests/: CMakeLists.txt  test_BondAdaptedMesh.cpp  test_CLCFGO.cpp  test_CLCFSF.cpp  test_FARFF.cpp  test_MMFFmini.cpp  test_RARFF.cpp  test_RARFF2.cpp  test_RARFFarr.cpp  test_RspFF.cpp  test_SoftMolecularDynamics.cpp  test_eFF.cpp  test_sp3space.cpp  test_spRotations.cpp
molecular_tests/data/: RARFF_out-inv.xyz  RARFF_out_flat_center.xyz  RARFF_out_flat_full.xyz  water_hexagonal.rff  watter2.rff  watter_sp2_center.rff  watter_sp3.rff  work.rff  work.rff-bak
molecular_tests/notes/: Gauss_Coulomb.wxmx
